content/v1.3.0/en/api/campaign-ext/HideoutMissionController.md
---
title: "HideoutMissionController"
description: "Auto-generated class reference for HideoutMissionController."
---
# HideoutMissionController

**Namespace:** SandBox.Missions.MissionLogics.Hideout
**Module:** SandBox.Missions
**Type:** `public class HideoutMissionController : MissionLogic, IMissionAgentSpawnLogic, IMissionBehavior`
**Base:** `MissionLogic`
**File:** `SandBox/Missions/MissionLogics/Hideout/HideoutMissionController.cs`

## Overview

`HideoutMissionController` is a controller whose job is less about storing data and more about driving the subsystem into its next state after receiving input.

## Mental Model

Treat `HideoutMissionController` as a Controller-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Properties

| Name | Signature |
|------|-----------|
| `TroopSpawningActive` | `public bool TroopSpawningActive { get; }` |
| `NumberOfActiveTroops` | `public int NumberOfActiveTroops { get; }` |
| `NumberOfTroopsNotSupplied` | `public int NumberOfTroopsNotSupplied { get; }` |

## Key Methods

### OnCreated
`public override void OnCreated()`

**Purpose:** **Purpose:** Invoked when the created event is raised.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.OnCreated();
```

### OnBehaviorInitialize
`public override void OnBehaviorInitialize()`

**Purpose:** **Purpose:** Invoked when the behavior initialize event is raised.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.OnBehaviorInitialize();
```

### OnObjectStoppedBeingUsed
`public override void OnObjectStoppedBeingUsed(Agent userAgent, UsableMissionObject usedObject)`

**Purpose:** **Purpose:** Invoked when the object stopped being used event is raised.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.OnObjectStoppedBeingUsed(userAgent, usedObject);
```

### OnAgentAlarmedStateChanged
`public override void OnAgentAlarmedStateChanged(Agent agent, Agent.AIStateFlag flag)`

**Purpose:** **Purpose:** Invoked when the agent alarmed state changed event is raised.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.OnAgentAlarmedStateChanged(agent, flag);
```

### OnMissionTick
`public override void OnMissionTick(float dt)`

**Purpose:** **Purpose:** Invoked when the mission tick event is raised.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.OnMissionTick(0);
```

### OnAgentRemoved
`public override void OnAgentRemoved(Agent affectedAgent, Agent affectorAgent, AgentState agentState, KillingBlow blow)`

**Purpose:** **Purpose:** Invoked when the agent removed event is raised.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.OnAgentRemoved(affectedAgent, affectorAgent, agentState, blow);
```

### StartSpawner
`public void StartSpawner(BattleSideEnum side)`

**Purpose:** **Purpose:** Starts the spawner flow or state machine.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.StartSpawner(side);
```

### StopSpawner
`public void StopSpawner(BattleSideEnum side)`

**Purpose:** **Purpose:** Stops the spawner flow or state machine.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.StopSpawner(side);
```

### IsSideSpawnEnabled
`public bool IsSideSpawnEnabled(BattleSideEnum side)`

**Purpose:** **Purpose:** Determines whether the this instance is in the side spawn enabled state or condition.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.IsSideSpawnEnabled(side);
```

### GetReinforcementInterval
`public float GetReinforcementInterval()`

**Purpose:** **Purpose:** Reads and returns the reinforcement interval value held by the this instance.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.GetReinforcementInterval();
```

### IsSideDepleted
`public unsafe bool IsSideDepleted(BattleSideEnum side)`

**Purpose:** **Purpose:** Determines whether the this instance is in the side depleted state or condition.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.IsSideDepleted(side);
```

### StartBossFightDuelMode
`public static void StartBossFightDuelMode()`

**Purpose:** **Purpose:** Starts the boss fight duel mode flow or state machine.

```csharp
// Static call; no instance required
HideoutMissionController.StartBossFightDuelMode();
```

### StartBossFightBattleMode
`public static void StartBossFightBattleMode()`

**Purpose:** **Purpose:** Starts the boss fight battle mode flow or state machine.

```csharp
// Static call; no instance required
HideoutMissionController.StartBossFightBattleMode();
```

### GetAllTroopsForSide
`public IEnumerable<IAgentOriginBase> GetAllTroopsForSide(BattleSideEnum side)`

**Purpose:** **Purpose:** Reads and returns the all troops for side value held by the this instance.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.GetAllTroopsForSide(side);
```

### GetNumberOfPlayerControllableTroops
`public int GetNumberOfPlayerControllableTroops()`

**Purpose:** **Purpose:** Reads and returns the number of player controllable troops value held by the this instance.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.GetNumberOfPlayerControllableTroops();
```

### GetSpawnHorses
`public bool GetSpawnHorses(BattleSideEnum side)`

**Purpose:** **Purpose:** Reads and returns the spawn horses value held by the this instance.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.GetSpawnHorses(side);
```

### SpawnTroops
`public void SpawnTroops(List<CommonAreaMarker> areaMarkers, List<PatrolArea> patrolAreas, Dictionary<Agent, HideoutMissionController.UsedObject> defenderAgentObjects, int spawnCount)`

**Purpose:** **Purpose:** Executes the SpawnTroops logic.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.SpawnTroops(areaMarkers, patrolAreas, dictionary<Agent, defenderAgentObjects, 0);
```

### SpawnRemainingTroopsForBossFight
`public void SpawnRemainingTroopsForBossFight(List<MatrixFrame> spawnFrames, int spawnCount)`

**Purpose:** **Purpose:** Executes the SpawnRemainingTroopsForBossFight logic.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.SpawnRemainingTroopsForBossFight(spawnFrames, 0);
```

### SetSpawnTroops
`public void SetSpawnTroops(bool spawnTroops)`

**Purpose:** **Purpose:** Assigns a new value to spawn troops and updates the object's internal state.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
hideoutMissionController.SetSpawnTroops(false);
```

### GetAllTroops
`public IEnumerable<IAgentOriginBase> GetAllTroops()`

**Purpose:** **Purpose:** Reads and returns the all troops value held by the this instance.

```csharp
// Obtain an instance of HideoutMissionController from the subsystem API first
HideoutMissionController hideoutMissionController = ...;
var result = hideoutMissionController.GetAllTroops();
```

## Usage Example

```csharp
var controller = Mission.Current.GetMissionBehavior<HideoutMissionController>();
```

## See Also

- [Area Index](../)